new folder in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Packages/User/Package\ Control.last-run
 Settings/Auto\ Save\ Session.sublime_session
 Settings/Session.sublime_session
 Backup/
+Settings/
+
