--- a/Packages/PyV8/osx/config.json
+++ b/Packages/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1369410955.0566399, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
+{"skip_update": false, "last_update": 1369629955.365598, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
