--- a/Packages/PyV8/osx/config.json
+++ b/Packages/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1370491537.6263211, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
+{"skip_update": false, "last_update": 1370584448.826261, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
